--- a/styles/style.css
+++ b/styles/style.css
@@ -121,7 +121,7 @@ nav .get {
   align-items: center;
   width: 100%;
   margin: auto;
-  padding: 10rem 0;
+  padding: 10rem 2%;
   background: linear-gradient(to bottom, #ffffff 45%, #eff3f7 45%);
 }
 .firstrow-pic1,
